Project

General

Profile

Actions

Bug #22996

closed

Snapset inconsistency is no longer detected

Added by David Zafman about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The fix for #20243 required additional handling of snapset inconsistency. The Object info and snapset aren't part of at the user attr inconsistency checking.


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #23054: luminous: Snapset inconsistency is no longer detectedResolvedDavid ZafmanActions
Actions #1

Updated by David Zafman about 6 years ago

  • Description updated (diff)
  • Status changed from New to 12
  • Assignee set to David Zafman
  • Priority changed from Normal to Urgent
Actions #2

Updated by Greg Farnum about 6 years ago

We also need this fix to include tests that happen in the QA suite to prevent a future regression! :)
(Presumably that won’t be difficult since the objectstore tool already supports corrupting these?)

Actions #3

Updated by David Zafman about 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #4

Updated by David Zafman about 6 years ago

  • Backport set to jewel, luminous
Actions #5

Updated by David Zafman about 6 years ago

  • Backport changed from jewel, luminous to luminous
Actions #6

Updated by Kefu Chai about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by David Zafman about 6 years ago

  • Copied to Backport #23054: luminous: Snapset inconsistency is no longer detected added
Actions #8

Updated by David Zafman about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF