osd: Add new snapset_inconsistency error check

Includes new test case

Caused by: cbb37643145e9c0359665d9f0d31fb8be8e73cfa
This changed attr consistency checking to exclude system keys,
which required snapset to be handled just like object info.

Fixes: http://tracker.ceph.com/issues/22996

Signed-off-by: David Zafman <dzafman@redhat.com>